force-app/main/default/objects/Dataflow_Job_Failure__e/Dataflow_Job_Failure__e.object-meta.xml
<CustomObject>
    <label>Dataflow Job Failure</label>
    <pluralLabel>Dataflow Job Failures</pluralLabel>
</CustomObject>