force-app/main/default/objects/Dataflow_Job_Failure__e/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>The date that the job was created / scheduled.</description>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>