force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>How long the job ran for.</description>
    <label>Duration</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>