force-app/main/default/objects/Dataflow_Job_Failure__e/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>The date-time that the job finished.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>