force-app/main/default/objects/Dataflow_Job_Failure__e/fields/ExecutedDate__c.field-meta.xml
<CustomField>
    <fullName>ExecutedDate__c</fullName>
    <description>The date-time the job began processing.</description>
    <label>Executed Date</label>
    <type>DateTime</type>
</CustomField>