force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>The name / label of the recipe or dataflow.</description>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>