force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Detailed message about the job&apos;s status or failure.</description>
    <label>Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>