force-app/main/default/objects/Dataflow_Job_Failure__e/fields/NextRunDate__c.field-meta.xml
<CustomField>
    <fullName>NextRunDate__c</fullName>
    <description>The date-time the job is next scheduled, if available.</description>
    <label>Next Run Date</label>
    <type>DateTime</type>
</CustomField>