force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <description>The % completion of the job.</description>
    <label>Progress</label>
    <precision>11</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>