force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>How many times the job was retried.</description>
    <label>Retry Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>