force-app/main/default/objects/Dataflow_Job_Failure__e/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>The date-time that the job was taken off the queue.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>