force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Known values:
Failure
Queued
Running
Success
Warning</description>
    <label>Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>