force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Dataflow or Recipe.</description>
    <label>Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>