force-app/main/default/objects/Dataflow_Job_Failure__e/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <description>How long the job waited to execute after being dequeued.</description>
    <label>Wait Time</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>